# omokai_part4_ai_robot_following_submission

./: .dockerignore  DEPENDENCIES.md  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  install_native.sh
docker/: entrypoint.sh
docs/: SOURCES.md
src/formation_coordinator/: README.md  package.xml  setup.cfg  setup.py
src/formation_coordinator/formation_coordinator/: formation_coordinator.py  geometry.py
src/mission_executor/: README.md  package.xml  setup.py
src/mission_executor/mission_executor/: executor.py
src/mission_interface/: README.md  package.xml  setup.cfg  setup.py
src/mission_interface/mission_interface/: prompt_publisher.py
src/mission_llm_planner/: README.md  package.xml  setup.cfg  setup.py
src/mission_llm_planner/mission_llm_planner/: llm_planner.py
src/mission_schemas/: README.md  package.xml  setup.cfg  setup.py
src/mission_schemas/mission_schemas/: schema.py
src/mission_validator/: README.md  package.xml  setup.py
src/mission_validator/mission_validator/: validator.py
src/omokai_bringup/: README.md  package.xml  setup.cfg  setup.py
src/omokai_bringup/config/: nav2_params.yaml  routes.yaml  spawn_pose.yaml
src/omokai_bringup/launch/: core_pipeline.launch.py  formation.launch.py  sim.launch.py
src/omokai_bringup/maps/: README.md  turtlebot3_world.pgm  turtlebot3_world.yaml
src/tb3_multi_robot/: OMOKAI_CHANGES.md  UPSTREAM_README.md  setup.py
src/tb3_multi_robot/launch/: tb3_nav2.launch.py  tb3_world.launch.py
src/tb3_multi_robot/models/turtlebot3_burger_cam/: model.config  model.sdf
src/tb3_multi_robot/params/: burger_cam_nav2_params.yaml
src/vision_follow/: README.md  package.xml  setup.cfg  setup.py
src/vision_follow/launch/: follow_nav2.launch.py  vision_follow.launch.py
src/vision_follow/params/: burger_cam_follow_nav2_params.yaml
src/vision_follow/vision_follow/: vision_follow_node.py
