<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>mission_schemas</name>
<version>0.0.1</version>
<description>Shared mission JSON contract (Pydantic). Single source of truth for planner, validator, executor.</description>
<maintainer email="candidate@example.com">omokai</maintainer>
<license>Apache-2.0</license>

<depend>python3-pydantic</depend>

<test_depend>ament_copyright</test_depend>
<test_depend>ament_flake8</test_depend>
<test_depend>ament_pep257</test_depend>
<test_depend>python3-pytest</test_depend>

<export>
<build_type>ament_python</build_type>
</export>
</package>
