<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>omokai_bringup</name>
<version>0.0.1</version>
<description>Top-level launch + params: sim bringup and full core pipeline.</description>
<maintainer email="candidate@example.com">omokai</maintainer>
<license>Apache-2.0</license>

<depend>rclpy</depend>

<!-- Phase 0/1 runtime bringup deps -->
<exec_depend>turtlebot3_gazebo</exec_depend>
<exec_depend>nav2_bringup</exec_depend>
<exec_depend>slam_toolbox</exec_depend>
<exec_depend>rviz2</exec_depend>

<test_depend>ament_copyright</test_depend>
<test_depend>ament_flake8</test_depend>
<test_depend>ament_pep257</test_depend>
<test_depend>python3-pytest</test_depend>

<export>
<build_type>ament_python</build_type>
</export>
</package>
