<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_follow</name>
  <version>1.0.0</version>
  <description>
    Part 4 (vision AI target detect + follow). One robot watches its camera,
    recognises a user-chosen target (an ArUco marker on another robot, or a
    YOLO/COCO object), sends the operator a snapshot the moment it sees it, and
    then follows it — turning to keep it centred and driving to hold a set
    distance. Standalone: no LLM and no Nav2 in the loop; it publishes velocity
    commands straight to the robot.
  </description>

  <maintainer email="you@example.com">Omokai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!--
    ArUco mode (the default, used for the robot-follows-robot demo) needs only
    OpenCV, which is covered by python3-opencv above.
    YOLO mode additionally needs Ultralytics, which is NOT resolvable by rosdep;
    it is installed with pip (see the repo README and DEPENDENCIES.md), pinned
    alongside numpy<2 to stay ABI-compatible with cv_bridge.
  -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
