<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_follow</name>
  <version>1.0.0</version>
  <description>
    Part 4 (vision): one robot sees a target (ArUco marker on another robot, or
    a YOLO class), sends the operator a snapshot, and follows it. In 'nav2'
    control mode each detection becomes a map-frame goal a fixed standoff short
    of the target, sent to Nav2, so the follower plans around obstacles instead
    of driving blindly at the target.
  </description>

  <maintainer email="you@example.com">Omokai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- nav2 control mode: map-frame goals via TF + the NavigateToPose action -->
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <!--
    YOLO mode only: ultralytics is pip-only (not rosdep-resolvable) and must be
    installed with numpy<2 to stay ABI-compatible with cv_bridge.
    The default aruco mode needs nothing beyond python3-opencv.
  -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
